[gd_scene load_steps=8 format=3 uid="uid://bop8hlrmhcc7d"]

[ext_resource type="Script" path="res://managers/game_manager/game_manager.gd" id="1_p65ti"]
[ext_resource type="AudioStream" uid="uid://xwnqj8a1a2f4" path="res://audios/SFX/sfx_perrito_clock .wav" id="2_5ihoa"]
[ext_resource type="AudioStream" uid="uid://d0lldlb2xoe68" path="res://audios/Songs/mx_perrito_piano_6.wav" id="3_ps3or"]
[ext_resource type="AudioStream" uid="uid://cggrgwvl3bsau" path="res://audios/Songs/mx_perrito_drums_1.wav" id="4_fi8vl"]
[ext_resource type="AudioStream" uid="uid://7jqp8i8mp3we" path="res://audios/Songs/mx_perrito_trumpet_1.wav" id="5_5hk3d"]
[ext_resource type="AudioStream" uid="uid://clkwggr4ygo7l" path="res://audios/Songs/mx_perrito_piano_5.wav" id="6_a7ow8"]
[ext_resource type="AudioStream" uid="uid://btujkelcjppjv" path="res://audios/Songs/mx_perrito_piano_4.wav" id="7_c8ydi"]

[node name="GameManager" type="Node"]
script = ExtResource("1_p65ti")

[node name="ListItems" type="Node3D" parent="."]

[node name="SfxDogFinishTime" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_5ihoa")
bus = &"SFX"

[node name="Music" type="Node" parent="."]

[node name="MusicPianoBase" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("6_a7ow8")
autoplay = true
bus = &"Music"

[node name="MusicDrum" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("4_fi8vl")
autoplay = true
bus = &"Music"

[node name="MusicTrumpet" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("5_5hk3d")
autoplay = true
bus = &"Music"

[node name="MusicPiano1" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("7_c8ydi")
autoplay = true
bus = &"Music"

[node name="MusicPiano2" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("3_ps3or")
autoplay = true
bus = &"Music"
